# ski

./: Cargo.toml  LICENSE  build.rs  flake.nix
nix/: module.nix  ski.nix
src/: cli.rs  config.rs  main.rs
