[package]
name = "ski"
version = "0.1.0"
description = "A simple tool to switch active ssh key pairs"
authors = ["Cowboylaserkittenjetshark <82691052+Cowboylaserkittenjetshark@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
