[package]
name = "ski"
version = "0.1.1"
description = "A simple tool to switch active ssh key pairs"
authors = ["Cowboylaserkittenjetshark <82691052+Cowboylaserkittenjetshark@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
color-eyre = "0.6.4"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["crypto"] }
toml = "0.8.22"

[build-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
dirs = "6.0.0"
